# hayatmoji-cli

./: .gitmodules  Cargo.toml  README.md
src/: main.rs
