[package]
name = "hayatmoji-cli"
version = "0.1.1"
edition = "2024"
description = "A hayatmoji interactive cli tool for using emojis on commits. 🤦"
license-file = "LICENSE"
repository = "https://github.com/hayatroid/hayatmoji-cli"
readme = "README.md"

[[bin]]
name = "hayatmoji"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
git2 = "0.20.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.4", features = ["preserve_order"] }
